--- a/nodeJs/conFusionServer/package.json
+++ b/nodeJs/conFusionServer/package.json
@@ -12,6 +12,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "^1.9.2",
+    "mongoose": "^6.5.1",
+    "mongoose-currency": "github:robertjustjones/mongoose-currency#mongoose5",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
