--- a/nodeJs/conFusionServer/package.json
+++ b/nodeJs/conFusionServer/package.json
@@ -10,11 +10,13 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.17.3",
     "http-errors": "~1.6.2",
     "jade": "^1.9.2",
     "mongoose": "^6.5.1",
     "mongoose-currency": "github:robertjustjones/mongoose-currency#mongoose5",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "session-file-store": "^1.5.0"
   },
   "devDependencies": {
     "connect-history-api-fallback": "^2.0.0",
