--- a/nodeJs/conFusionServer/package.json
+++ b/nodeJs/conFusionServer/package.json
@@ -16,6 +16,9 @@
     "mongoose": "^6.5.1",
     "mongoose-currency": "github:robertjustjones/mongoose-currency#mongoose5",
     "morgan": "~1.9.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^7.1.2",
     "session-file-store": "^1.5.0"
   },
   "devDependencies": {
