--- a/nodeJs/conFusionServer/package.json
+++ b/nodeJs/conFusionServer/package.json
@@ -13,10 +13,12 @@
     "express-session": "^1.17.3",
     "http-errors": "~1.6.2",
     "jade": "^1.9.2",
+    "jsonwebtoken": "^8.3.0",
     "mongoose": "^6.5.1",
     "mongoose-currency": "github:robertjustjones/mongoose-currency#mongoose5",
     "morgan": "~1.9.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "session-file-store": "^1.5.0"
