--- a/nodeJs/conFusionServer/package.json
+++ b/nodeJs/conFusionServer/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.5.1",
     "mongoose-currency": "github:robertjustjones/mongoose-currency#mongoose5",
     "morgan": "~1.9.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
